chore: refine title

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -512,7 +512,7 @@
       },
       {
         "command": "fx-extension.addCICDWorkflows",
-        "title": "Add CI/CD Workflows",
+        "title": "Teams: Add CI/CD Workflows",
         "icon": "$(sync)"
       },
       {
