--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -212,10 +212,13 @@ jobs:
             email=`cat $file | grep '@author' | grep -i -o '[A-Z0-9._%+-]\+@[A-Z0-9.-]\+\.[A-Z]\{2,4\}'`
 
             if [ -z "$email" ]; then
-              description="$description <tr> <td>$case</td> <td>N/A</td> </tr> "
+              description="$description <tr> <td>$file</td> <td>N/A</td> </tr> "
               continue
             fi
-            emails="$emails;$email"
+
+            if [[ ! "$emails" == *"$email"* ]]; then
+              emails="$emails;$email"
+            fi
 
             if [ ! -v "email_uid[$email]" ]; then
               resp=$(curl -u :${{ secrets.ADO_PAT }} "https://vssps.dev.azure.com/msazure/_apis/identities?searchFilter=General&filterValue=$email&queryMembership=None&api-version=6.0")
@@ -223,7 +226,7 @@ jobs:
               email_uid[$email]=$uid
             fi
 
-            description="$description <tr> <td>$case</td> <td><a href=\\\"#\\\" data-vss-mention=\\\"version:2.0,${email_uid[$email]}\\\">$email</a></td> </tr> "
+            description="$description <tr> <td>$file</td> <td><a href=\\\"#\\\" data-vss-mention=\\\"version:2.0,${email_uid[$email]}\\\">$email</a></td> </tr> "
           done <<< $failures
 
           echo "::set-output name=description::$description"
