--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -50,6 +50,7 @@
   "sideEffects": false,
   "dependencies": {
     "@azure/identity": "^2.0.1",
+    "@azure/msal-browser": "^2.21.0",
     "@azure/msal-node": "~1.1.0",
     "@microsoft/microsoft-graph-client": "^3.0.1",
     "axios": "^0.24.0",
