--- a/package.json
+++ b/package.json
@@ -26,5 +26,10 @@
   "bin": {
     "teamsfx": "./packages/cli/cli.js"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "lint-staged": {
+    "*":[
+      "npx eslint --plugin 'no-secrets' --cache --ignore-pattern 'package-lock.json' --ignore-pattern 'package.json'"
+    ]
+  }
 }
