--- a/packages/failpoint-ts/package.json
+++ b/packages/failpoint-ts/package.json
@@ -36,6 +36,7 @@
     "chai": "^4.3.4",
     "eslint": "^7.22.0",
     "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-no-secrets": "^0.8.9",
     "eslint-plugin-prettier": "^4.0.0",
     "lint-staged": "^10.5.4",
     "mocha": "^9.0.2",
@@ -50,6 +51,9 @@
   "lint-staged": {
     "*.{js,jsx,css,ts,tsx}": [
       "npx eslint --cache --fix --quiet"
+    ],
+    "*":[
+      "npx eslint --plugin 'no-secrets' --cache --ignore-pattern 'package-lock.json'"
     ]
   }
 }
