--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -140,6 +140,7 @@
     "dotenv": "^8.2.0",
     "eslint": "^7.22.0",
     "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-no-secrets": "^0.8.9",
     "eslint-plugin-prettier": "^4.0.0",
     "faker": "^5.5.2",
     "find-process": "^1.4.4",
@@ -174,6 +175,9 @@
   "lint-staged": {
     "*.{js,jsx,css,ts,tsx}": [
       "npx eslint --cache --fix --quiet"
+    ],
+    "*":[
+      "npx eslint --plugin 'no-secrets' --cache --ignore-pattern 'package-lock.json' --ignore-pattern 'package.json'"
     ]
   }
 }
