--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "setup": "npm install && npm run bootstrap --hoist && npm run install-eslint",
     "setup-failpoint": "npm run setup && npx lerna run build-failpoint",
-    "bootstrap": "lerna bootstrap",
+    "bootstrap": "lerna bootstrap --concurrency=1",
     "install-eslint": "cd packages/eslint-config && npm install",
     "lint:staged": "lerna run lint:staged --stream",
     "lint": "lerna run lint --stream",
