--- a/lerna.json
+++ b/lerna.json
@@ -3,7 +3,10 @@
     "packages": [
         "packages/api",
         "packages/fx-core",
+        "packages/sdk",
+        "packages/cli",
         "packages/vscode-extension",
+        "packages/failpoint-ts",
         "templates"
     ],
     "command": {
