--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -55,6 +55,7 @@
     "@dbpiper/timer": "1.0.0-beta.2",
     "@feathersjs/hooks": "^0.6.5",
     "@microsoft/teamsfx-api": "^0.13.0",
+    "@npmcli/arborist": "^4.2.0",
     "@npmcli/package-json": "^1.0.1",
     "@types/jwt-decode": "3.1.0",
     "@types/proper-lockfile": "^4.1.1",
