--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -63,6 +63,7 @@
     "axios": "^0.21.2",
     "cryptr": "^6.0.2",
     "dateformat": "^4.5.1",
+    "detect-port": "^1.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs-extra": "^9.1.0",
