chore: enable secret check on git pre-commit (#3673)
* chore: enable secret check on git precommit

* chore: update

* chore: update

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint:staged": "lerna run lint:staged --stream",
     "lint": "lerna run lint --stream",
     "manual-version:rc": "lerna version --preid=rc --no-push --no-changelog --ignore-scripts",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "precommit": "lint-staged"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.0.1",
@@ -26,5 +27,10 @@
   "bin": {
     "teamsfx": "./packages/cli/cli.js"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "lint-staged": {
+    "*": [
+      "npx eslint --plugin 'no-secrets' --cache --ignore-pattern 'package-lock.json' --ignore-pattern 'package.json'"
+    ]
+  }
 }
