--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -38,7 +38,8 @@
     "prepare": "npm run build && node ./scripts/download-templates-zip.js $(git tag --list)",
     "prepublishOnly": "npm run test:unit && npm run build",
     "package": "rimraf build && webpack --mode production --config ./webpack.config.js",
-    "precommit": "lint-staged"
+    "check-sensitive": "npx eslint --plugin 'no-secrets' --cache --ignore-pattern 'package.json' --ignore-pattern 'package-lock.json'",
+    "precommit": "npm run check-sensitive && lint-staged"
   },
   "dependencies": {
     "@apidevtools/swagger-parser": "^10.0.2",
@@ -140,6 +141,7 @@
     "dotenv": "^8.2.0",
     "eslint": "^7.22.0",
     "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-no-secrets": "^0.8.9",
     "eslint-plugin-prettier": "^4.0.0",
     "faker": "^5.5.2",
     "find-process": "^1.4.4",
