--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -85,6 +85,7 @@
     "node-ts-uuid": "^1.0.8",
     "openapi-types": "^7.2.3",
     "proper-lockfile": "^4.1.2",
+    "proxyquire": "^2.1.3",
     "read-package-json-fast": "^2.0.3",
     "reflect-metadata": "^0.1.13",
     "semver": "^7.3.4",
@@ -109,6 +110,7 @@
     "@types/chai-spies": "^1.0.3",
     "@types/cryptr": "^4.0.1",
     "@types/dateformat": "^3.0.1",
+    "@types/detect-port": "^1.3.2",
     "@types/express": "^4.17.9",
     "@types/faker": "^5.5.0",
     "@types/fs-extra": "^9.0.9",
@@ -125,6 +127,7 @@
     "@types/mustache": "^4.1.1",
     "@types/node": "^14.14.21",
     "@types/node-forge": "^0.9.7",
+    "@types/proxyquire": "^1.3.28",
     "@types/semver": "^7.3.4",
     "@types/sinon": "^9.0.10",
     "@types/tedious": "^4.0.3",
