--- a/packages/fx-core/src/common/templates-config.json
+++ b/packages/fx-core/src/common/templates-config.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.1.*",
+  "version": "^0.1.0",
   "tagPrefix": "templates@",
   "tagListURL": "https://github.com/OfficeDev/TeamsFx/releases/download/template-tag-list/template-tags.txt",
   "templateDownloadBaseURL": "https://github.com/OfficeDev/TeamsFx/releases/download"
