--- a/templates/package.json
+++ b/templates/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "check-sensitive": "npx eslint --plugin 'no-secrets' --cache --ignore-pattern 'package.json' --ignore-pattern 'package-lock.json'",
-    "precommit": "npm run check-sensitive && lint-staged"
+    "precommit": "npm run check-sensitive && lint-staged",
+    "version": "../.github/scripts/pkg-version.sh core-template"
   },
   "devDependencies": {
     "@shared/eslint-config": "file:../packages/eslint-config",
@@ -19,6 +20,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.4.1",
+    "semver": "^7.3.5",
     "tslint": "^6.1.3",
     "typescript": "^4.2.3"
   },
