chore: change server's code owner

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -110,4 +110,4 @@
 
 /.github/workflows/cd.yml @adashen @LongOddCode @IvanJobs @qinezh @wenytang-ms
 
-/packages/server @jayzhang @IvanJobs @Alive-Fish
+/packages/server @chagong @Alive-Fish @jayzhang
