--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teamsfx-cli",
-  "version": "0.10.1",
+  "version": "0.10.2-rc.0",
   "author": "Microsoft Corporation",
   "description": "",
   "license": "MIT",
@@ -104,8 +104,8 @@
     "@azure/core-http": "^1.2.0",
     "@azure/identity": "^1.3.0",
     "@azure/ms-rest-nodeauth": "^3.0.6",
-    "@microsoft/teamsfx-api": "^0.13.0",
-    "@microsoft/teamsfx-core": "^1.2.1",
+    "@microsoft/teamsfx-api": "^0.14.0-rc.0",
+    "@microsoft/teamsfx-core": "^1.3.0-rc.0",
     "adm-zip": "^0.5.5",
     "applicationinsights": "^1.8.10",
     "async-mutex": "^0.3.1",
