--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teamsfx-core",
-  "version": "1.2.1",
+  "version": "1.3.0-rc.0",
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "license": "MIT",
@@ -55,7 +55,7 @@
     "@azure/storage-blob": "^12.7.0",
     "@dbpiper/timer": "1.0.0-beta.2",
     "@feathersjs/hooks": "^0.6.5",
-    "@microsoft/teamsfx-api": "^0.13.0",
+    "@microsoft/teamsfx-api": "^0.14.0-rc.0",
     "@npmcli/arborist": "^4.2.0",
     "@npmcli/package-json": "^1.0.1",
     "@types/jwt-decode": "3.1.0",
