--- a/packages/fx-core/src/common/templates-config.json
+++ b/packages/fx-core/src/common/templates-config.json
@@ -1,6 +1,7 @@
 {
   "version": "^0.1.0",
   "tagPrefix": "templates@",
+  "alphaReleaseTag": "template@0.0.0-alpha",
   "tagListURL": "https://github.com/OfficeDev/TeamsFx/releases/download/template-tag-list/template-tags.txt",
   "templateDownloadBaseURL": "https://github.com/OfficeDev/TeamsFx/releases/download"
 }
