--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ms-teams-vscode-extension",
   "displayName": "Teams Toolkit (Preview)",
-  "description": "Create, debug, and deploy Teams apps with Teams Toolkit",
+  "description": "Create, debug, and deploy Teams apps with Teams Toolkit - test ut",
   "version": "3.2.0",
   "publisher": "TeamsDevApp",
   "author": "Microsoft Corporation",
