--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -885,7 +885,7 @@
     "test-compile": "tsc -p ./",
     "test-watch": "tsc -watch -p ./",
     "pretest": "npm run lint && npm run check-format && npm run test-compile",
-    "test:unit": "rimraf coverage && npm run compile && node out/test/unit/runTest.js && npm run test:unit:migration",
+    "test:unit": "rimraf coverage && rimraf out && npm run compile && node out/test/unit/runTest.js && npm run test:unit:migration",
     "test:unit:migration": "nyc mocha --require ts-node/register \"test/unit/migration/*.test.ts\"",
     "test:integration": "echo 'to be implementd'",
     "test:e2e": "echo 'to be implementd'",
