--- a/lerna.json
+++ b/lerna.json
@@ -8,6 +8,7 @@
         "packages/server",
         "packages/vscode-extension",
         "packages/failpoint-ts",
+        "packages/adaptivecards-tools-sdk",
         "templates"
     ],
     "command": {
