--- a/packages/adaptivecards-tools-sdk/package.json
+++ b/packages/adaptivecards-tools-sdk/package.json
@@ -45,7 +45,7 @@
     "react": "^17.0.2",
     "markdown-it": "^12.2.0",
     "adaptive-expressions": "^4.14.1",
-    "adaptivecards": "^2.10.0-beta.2",
+    "adaptivecards": "^2.10.0",
     "adaptivecards-templating": "^2.1.0",
     "json-schema-to-typescript": "^10.1.4"
   },
