--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -85,6 +85,7 @@
     "mime": "^2.5.2",
     "mustache": "^4.2.0",
     "node-forge": "^1.0.0",
+    "nanoid": "^3.1.30",
     "node-ts-uuid": "^1.0.8",
     "openapi-types": "^7.2.3",
     "proper-lockfile": "^4.1.2",
@@ -130,6 +131,7 @@
     "@types/node": "^14.14.21",
     "@types/node-forge": "^0.9.7",
     "@types/proxyquire": "^1.3.28",
+    "@types/rewire": "^2.5.28",
     "@types/semver": "^7.3.4",
     "@types/sinon": "^9.0.10",
     "@types/tedious": "^4.0.3",
@@ -158,6 +160,7 @@
     "nyc": "^15.1.0",
     "prettier": "^2.4.1",
     "proxyquire": "^2.1.3",
+    "rewire": "^6.0.0",
     "sinon": "^9.2.2",
     "source-map-support": "^0.5.19",
     "tmp": "^0.2.1",
