--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -40,7 +40,9 @@
     "prepublishOnly": "npm run test:unit && npm run build",
     "package": "rimraf build && webpack --mode production --config ./webpack.config.js",
     "check-sensitive": "npx eslint --plugin 'no-secrets' --cache --ignore-pattern 'package.json' --ignore-pattern 'package-lock.json'",
-    "precommit": "npm run check-sensitive && lint-staged"
+    "precommit": "npm run check-sensitive && lint-staged",
+    "install:tabs": "cd tabs && npm install",
+    "installAll": "npm run install:tabs"
   },
   "dependencies": {
     "@apidevtools/swagger-parser": "^10.0.2",
