--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -62,7 +62,8 @@
     "@types/jwt-decode": "3.1.0",
     "@types/proper-lockfile": "^4.1.1",
     "adm-zip": "^0.5.5",
-    "ajv": "^7.2.4",
+    "ajv": "^8.5.0",
+    "ajv-draft-04": "^1.0.0",
     "axios": "^0.21.2",
     "cryptr": "^6.0.2",
     "dateformat": "^4.5.1",
