--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -42,5 +42,6 @@ jobs:
 
       - name: Unit Test
         if: ${{ matrix.os == 'windows-latest'}}
+        working-directory: packages\fx-core
         run: |
-          npx lerna run test:unit --stream
+          npx mocha tests/core/pvm/*
