--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -40,7 +40,7 @@ jobs:
         run: |
           xvfb-run -a npx lerna run test:unit --stream
 
-      - name: Unit Test
+      - name: Unit Test(windows)
         if: ${{ matrix.os == 'windows-latest'}}
         working-directory: packages\fx-core
         run: |
