--- a/.github/workflows/template-release.yml
+++ b/.github/workflows/template-release.yml
@@ -18,10 +18,12 @@ jobs:
       uses: actions/checkout@v2.3.4
       with:
         ref: ${{ github.ref }}
-    - name: Prepare environment
-        run: curl -sSL https://git.io/get-mo -o mo && chmod +x mo && sudo mv mo /usr/local/bin/
     - name: Generate Template Zip Files
-        run: .github/scripts/template-zip-autogen.sh
+        run:  |
+              curl -sSL https://git.io/get-mo -o mo
+              chmod +x mo
+              sudo mv mo /usr/local/bin/
+              .github/scripts/template-zip-autogen.sh
     - name: Create Templates Release
       uses: ncipollo/release-action@v1.7.3
       with:
