--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -1004,6 +1004,7 @@
     "@npmcli/package-json": "^1.0.1",
     "@vscode/webview-ui-toolkit": "^0.8.5",
     "async-mutex": "^0.3.1",
+    "ajv": "^8.5.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jscodeshift": "^0.13.0",
